# zsh-history-to-fish

./: Cargo.toml  LICENSE  README.md
src/: history_converter.rs  lib.rs  main.rs
